--- a/css/main-page.css
+++ b/css/main-page.css
@@ -1,8 +1,53 @@
+@media (max-width: 650px) {
+  .navbar {
+    flex-flow: column nowrap !important;
+  }
+  .navbar img {
+    padding-top: 1rem;
+  }
+
+  header {
+    text-align: center;
+  }
+
+  h1 {
+    padding: 1rem;
+    margin: 0rem;
+  }
+
+  .collapse {
+    display: flex;
+    flex-flow: column nowrap;
+    padding-bottom: 1rem;
+  }
+  .collapse a {
+    line-height: 2rem;
+  }
+  .collapse i {
+    padding-right: 1rem !important;
+  }
+}
+header {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+}
+
 .navbar {
   display: flex;
   flex-flow: row nowrap;
   background-color: #343a40;
-  width: 100vw;
+  width: 98.932vw;
+  margin: auto;
+  justify-content: flex-start;
+}
+.navbar img {
+  height: 10vh;
+  align-self: center;
+  padding-left: 0.4rem;
+}
+.navbar i {
+  padding-right: 0.4rem;
 }
 
 .collapse {
@@ -13,6 +58,7 @@
   color: rgba(255, 255, 255, 0.5);
   text-decoration: none;
   padding: 0rem 0.5rem;
+  font-size: 1.15rem;
 }
 
 .collapse a:hover {
@@ -26,16 +72,222 @@ h1 {
   color: #fff;
 }
 
-.navbar img {
-  height: 10vh;
+@media (max-width: 500px) {
+  .social-text {
+    display: none;
+  }
+
+  i {
+    transform: scale(1.5);
+    padding: 0rem 20rem;
+  }
+}
+@media (max-width: 650px) {
+  .navbar-footer {
+    flex-flow: column nowrap !important;
+  }
+
+  footer {
+    text-align: center;
+  }
+
+  .social {
+    padding: 0rem 0rem 1rem 0rem !important;
+  }
+
+  .dropdown-content {
+    width: 98vw;
+    justify-content: space-between;
+    margin: auto;
+  }
+}
+.navbar-footer {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  background-color: #343a40;
+  width: 98.932vw;
+  margin: auto;
+}
+.navbar-footer a {
+  color: rgba(255, 255, 255, 0.5);
+  text-decoration: none;
+  padding: 0rem 0.5rem;
+}
+
+a:hover {
+  color: rgba(255, 255, 255, 0.9);
+  text-decoration: underline;
+}
+
+.dropbtn {
+  background-color: #343a40;
+  color: white;
+  padding: 16px;
+  font-size: 1.2rem;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  bottom: 55px;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: #343a40;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  text-decoration: underline;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: rgba(255, 255, 255, 0.9);
+  color: #343a40;
+}
+
+.social {
   align-self: center;
-  padding-left: 0.4rem;
+  justify-self: flex-end;
+  padding-right: 1rem;
+  font-size: 1.2rem;
 }
 
 i {
-  padding-right: 0.4rem;
+  padding: 0.5rem 0.5rem;
 }
 
+@media (max-width: 850px) {
+  .Norbert, .Arnold, .Carl, .Gustav, .Garfunkel {
+    grid-template-areas: "name name" "photo photo" "info info" "button button" !important;
+  }
+  .Norbert a, .Arnold a, .Carl a, .Gustav a, .Garfunkel a {
+    margin: auto;
+  }
+  .Norbert .teddyPhoto, .Arnold .teddyPhoto, .Carl .teddyPhoto, .Gustav .teddyPhoto, .Garfunkel .teddyPhoto {
+    margin: auto;
+    max-width: 60vw;
+  }
+  .Norbert .teddyInfo, .Arnold .teddyInfo, .Carl .teddyInfo, .Gustav .teddyInfo, .Garfunkel .teddyInfo {
+    text-align: center;
+  }
+}
 body {
   margin: 0rem;
+}
+
+h2 {
+  text-align: center;
+}
+
+#product {
+  padding: 3rem 0rem;
+}
+
+#mainPage {
+  text-align: center;
+}
+#mainPage li {
+  list-style: none;
+  line-height: 1.5;
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+.Norbert, .Arnold, .Carl, .Gustav, .Garfunkel {
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+  grid-template-rows: auto;
+  grid-template-areas: "photo name" "photo info" "photo button";
+  border: 10px double #343a40;
+  max-width: 95vw;
+  margin: auto;
+  margin-bottom: 1em;
+}
+
+#mainPage .teddyName {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  display: flex;
+  grid-area: name;
+  font-size: 2rem;
+  text-decoration: none;
+  color: black;
+  justify-content: center;
+  align-self: center;
+}
+
+.teddyInfo {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: info;
+  text-align: center;
+  padding-left: 0rem;
+}
+
+.teddyPhoto {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 1;
+  grid-area: photo;
+  max-width: 35vw;
+  border: 4px solid #444;
+  box-shadow: 2px 0px 0px 0px rgba(145, 133, 133, 0.6);
+}
+
+#btnCustom {
+  -ms-grid-row: 3;
+  -ms-grid-column: 2;
+  grid-area: button;
+  font-size: 1.4rem;
+  width: 70%;
+  box-shadow: inset 0px 1px 0px 0px #ffffff;
+  background: linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+  background-color: #ffffff;
+  border-radius: 6px;
+  border: 1px solid black;
+  display: inline-block;
+  cursor: pointer;
+  color: #333333;
+  margin: 0rem auto 2rem auto;
+}
+
+@media (max-width: 850px) {
+  #mainPage .teddyName {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+  }
+  .teddyInfo {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+  }
+  .teddyPhoto {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+  }
+  #btnCustom {
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+  }
 }
