--- a/css/product-page.css
+++ b/css/product-page.css
@@ -1,8 +1,53 @@
+@media (max-width: 650px) {
+  .navbar {
+    flex-flow: column nowrap !important;
+  }
+  .navbar img {
+    padding-top: 1rem;
+  }
+
+  header {
+    text-align: center;
+  }
+
+  h1 {
+    padding: 1rem;
+    margin: 0rem;
+  }
+
+  .collapse {
+    display: flex;
+    flex-flow: column nowrap;
+    padding-bottom: 1rem;
+  }
+  .collapse a {
+    line-height: 2rem;
+  }
+  .collapse i {
+    padding-right: 1rem !important;
+  }
+}
+header {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+}
+
 .navbar {
   display: flex;
   flex-flow: row nowrap;
   background-color: #343a40;
-  width: 100vw;
+  width: 98.932vw;
+  margin: auto;
+  justify-content: flex-start;
+}
+.navbar img {
+  height: 10vh;
+  align-self: center;
+  padding-left: 0.4rem;
+}
+.navbar i {
+  padding-right: 0.4rem;
 }
 
 .collapse {
@@ -13,6 +58,7 @@
   color: rgba(255, 255, 255, 0.5);
   text-decoration: none;
   padding: 0rem 0.5rem;
+  font-size: 1.15rem;
 }
 
 .collapse a:hover {
@@ -26,16 +72,274 @@ h1 {
   color: #fff;
 }
 
-.navbar img {
-  height: 10vh;
+@media (max-width: 500px) {
+  .social-text {
+    display: none;
+  }
+
+  i {
+    transform: scale(1.5);
+    padding: 0rem 20rem;
+  }
+}
+@media (max-width: 650px) {
+  .navbar-footer {
+    flex-flow: column nowrap !important;
+  }
+
+  footer {
+    text-align: center;
+  }
+
+  .social {
+    padding: 0rem 0rem 1rem 0rem !important;
+  }
+
+  .dropdown-content {
+    width: 98vw;
+    justify-content: space-between;
+    margin: auto;
+  }
+}
+.navbar-footer {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  background-color: #343a40;
+  width: 98.932vw;
+  margin: auto;
+}
+.navbar-footer a {
+  color: rgba(255, 255, 255, 0.5);
+  text-decoration: none;
+  padding: 0rem 0.5rem;
+}
+
+a:hover {
+  color: rgba(255, 255, 255, 0.9);
+  text-decoration: underline;
+}
+
+.dropbtn {
+  background-color: #343a40;
+  color: white;
+  padding: 16px;
+  font-size: 1.2rem;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  bottom: 55px;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: #343a40;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  text-decoration: underline;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: rgba(255, 255, 255, 0.9);
+  color: #343a40;
+}
+
+.social {
   align-self: center;
-  padding-left: 0.4rem;
+  justify-self: flex-end;
+  padding-right: 1rem;
+  font-size: 1.2rem;
 }
 
 i {
-  padding-right: 0.4rem;
+  padding: 0.5rem 0.5rem;
 }
 
+@media (max-width: 850px) {
+  .teddyImport {
+    grid-template-areas: "name name" "photo photo" "info info" "panier panier" !important;
+    padding-top: 1rem;
+  }
+  .teddyImport a {
+    margin: auto;
+  }
+  .teddyImport .teddyPhoto {
+    margin: auto;
+    max-width: 60vw;
+  }
+  .teddyImport .teddyInfo {
+    text-align: center;
+  }
+  .teddyImport .checkout {
+    max-width: 60vw;
+  }
+
+  .teddyColorLayout {
+    padding-top: 1rem;
+    display: flex !important;
+    flex-direction: column;
+    margin: auto;
+  }
+
+  .teddyColors {
+    bottom: 1vh !important;
+  }
+}
 body {
   margin: 0rem;
+}
+
+.teddyImport {
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+  grid-template-rows: auto;
+  grid-template-areas: "photo name" "photo info" "photo ." ". panier";
+  max-width: 95vw;
+  margin: auto;
+  margin-bottom: 1em;
+  padding-top: 2rem;
+}
+
+.teddyName {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: name;
+  font-size: 1.8rem;
+}
+
+select {
+  display: table-row;
+  max-height: 3vh;
+}
+
+select::after {
+  content: none;
+}
+
+option {
+  display: table-cell;
+  font-size: 1.3rem;
+}
+
+.teddyInfo {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: info;
+  text-align: center;
+  padding-left: 0rem;
+}
+
+.teddyPhoto {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  -ms-grid-column: 1;
+  margin: auto;
+  grid-area: photo;
+  max-width: 35vw;
+  border: 10px solid #444;
+  box-shadow: 3px 2px 2px 1.5px rgba(145, 133, 133, 0.6);
+}
+
+#product-pull {
+  text-align: center;
+}
+#product-pull li {
+  list-style: none;
+  font-size: 1.4rem;
+  font-weight: 400;
+  padding: 1rem 2.5rem;
+}
+#product-pull li#price {
+  font-weight: bold;
+}
+
+.checkout {
+  -ms-grid-row: 4;
+  -ms-grid-column: 2;
+  flex: 1;
+  display: flex;
+  margin: auto;
+  color: #fff;
+  background-color: #0090e3;
+  max-width: 30vw;
+  grid-area: panier;
+  justify-content: flex-end;
+}
+
+@media (max-width: 850px) {
+  .teddyName {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+  }
+  .teddyInfo {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+  }
+  .teddyPhoto {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+  }
+  .checkout {
+    -ms-grid-row: 4;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+  }
+}
+.checkout .icon-card {
+  font-size: 22px;
+  padding: 5px 8px;
+  justify-self: center;
+}
+
+.btn-default {
+  flex: 1;
+  transition: 0.4s;
+  color: #fff;
+  background-color: #303030;
+  text-transform: uppercase;
+}
+
+.teddyColorLayout {
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+  grid-template-areas: "color ." ". .";
+}
+
+.teddyColors {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  position: relative;
+  bottom: 4vh;
+  grid-area: color;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 1.5rem;
+  font-size: 1.4rem;
+  margin: auto;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  text-align: center;
 }
