Page Panier + ajout fonctionalités page produit

--- a/css/checkout-page.css
+++ b/css/checkout-page.css
@@ -177,3 +177,91 @@ i {
 body {
   margin: 0rem;
 }
+
+#checkoutTitle {
+  text-align: center;
+}
+
+#container img {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 4;
+  -ms-grid-column: 1;
+  margin: auto;
+  grid-area: photo;
+  max-width: 35vw;
+  border: 10px solid #444;
+  box-shadow: 3px 2px 2px 1.5px rgba(145, 133, 133, 0.6);
+}
+
+.mainContainer {
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+  grid-template-rows: auto;
+  grid-template-areas: "photo name button" "photo quantity totalPrice" "photo color totalPrice" "photo price .";
+  max-width: 95vw;
+  margin: auto;
+  margin-bottom: 1em;
+  border: 1px solid black;
+}
+
+.teddyImg {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 4;
+  -ms-grid-column: 1;
+  grid-area: photo;
+  margin: auto 0rem;
+}
+
+.teddyName {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: name;
+  text-align: center;
+}
+
+.teddyColor {
+  -ms-grid-row: 3;
+  -ms-grid-column: 2;
+  grid-area: color;
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+.teddyQuantity {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: quantity;
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+.teddyPrice {
+  -ms-grid-row: 4;
+  -ms-grid-column: 2;
+  grid-area: price;
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+.TeddyTotalPrice {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 3;
+  grid-area: totalPrice;
+  text-align: center;
+  margin: auto 0rem;
+  font-size: 1.3rem;
+}
+
+.deleteButton {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  max-width: 6vw;
+  max-height: 5vh;
+  grid-area: button;
+  margin: 0rem 0rem 2rem auto;
+  padding: 0rem;
+}
+.deleteButton i {
+  margin: auto;
+}
