--- a/views/checkout-page.html
+++ b/views/checkout-page.html
@@ -12,11 +12,13 @@
 
         <script src="https://kit.fontawesome.com/c838d79e10.js" crossorigin="anonymous"></script>
 
+        <script src="checkout.js"></script>
+
         <title>Panier - Oriteddy - Finalisez votre commande !</title>
 
     </head>
 
-    <body>
+    <body onload="teddyGet()">
 
         <header>
             <nav class="navbar">
@@ -24,55 +26,18 @@
                 <h1>Oriteddy</h1>
                 <div class="navbar-responsive collapse">
                     <a class="nav-item nav-link" href="index.html"><i class="fas fa-home"></i>Page Principale</a>
-                    <a class="nav-item nav-link" href="product-page.html"><i class="fas fa-cog"></i>Customisez vos oursons</a>
                 </div>
             </nav>
         </header>
 
-        <section>
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
+
+        <h2 id="checkoutTitle"></h2>
+        <section id="container">
         </section>
+
+        <section id="finalCheckout"></section>
+
+        <section id="form"></section>
 
         <footer>
             <nav class="navbar-footer">
@@ -92,5 +57,6 @@
             </div>
             </nav>
         </footer>
+
     </body>
 </html>
