--- a/views/product-page.html
+++ b/views/product-page.html
@@ -12,7 +12,7 @@
 
         <script src="https://kit.fontawesome.com/c838d79e10.js" crossorigin="anonymous"></script>
 
-        <title>Produits - Oriteddy - Tous vos oursons préférés sur une seule page</title>
+        <title>Produits - Oriteddy - Tous vos oursons préférés au même endroit</title>
     
     </head>
 
@@ -40,7 +40,9 @@
                     </select>
                 </div>
             </section>
-
+                <div class="panierLink">
+                    <button type="button" class="checkoutClick" id="btn-checkout" onclick="location.href = 'checkout-page.html';">Accéder au panier</button>
+                </div>
             </section>
 
 
