--- a/scss/main-page.scss
+++ b/scss/main-page.scss
@@ -2,6 +2,12 @@
 @import 'footer.scss';
 
 
+@media (max-width: 1150px) {
+    #btnCustom {
+        font-size: 1.3rem !important;
+    }
+}
+
 @media (max-width: 850px) {
     .Norbert {
         grid-template-areas:
@@ -24,6 +30,7 @@
 
 body {
     margin: 0rem;
+    background-color: rgb(241, 234, 234);
 }
 
 h2 {
@@ -39,14 +46,14 @@ h2 {
     li {
         list-style: none;
         line-height: 1.5;
-        font-size: 1.4rem;
+        font-size: 1.8rem;
         font-weight: bold;
     }
 }
 
 .Norbert{
     display: grid;
-    grid-template-columns: 1fr 1.5fr;
+    grid-template-columns: 1fr 1.3fr;
     grid-template-rows: auto;
     grid-template-areas: 
     'photo name'
@@ -56,6 +63,7 @@ h2 {
     max-width: 95vw;
     margin: auto;
     margin-bottom: 1em;
+    background-color: #fff;
 }
 
 #mainPage .teddyName {
@@ -76,7 +84,7 @@ h2 {
 
 .teddyPhoto {
     grid-area: photo;
-    max-width: 35vw;
+    max-width: 40vw;
     border: 4px solid #444;
     box-shadow: 2px 0px 0px 0px rgba(145, 133, 133, 0.6);
 }
@@ -87,15 +95,20 @@ h2 {
 
 #btnCustom {
     grid-area: button;
-    font-size: 1.4rem;
-    width: 70%;
+    font-size: 1.6rem;
+    width: fit-content;
+    max-height: 6vh;
     box-shadow:inset 0px 1px 0px 0px #ffffff;
 	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
 	background-color:#ffffff;
 	border-radius:6px;
-	border:1px solid black;
+	border:2px solid black;
 	display:inline-block;
 	cursor:pointer;
     color:#333333;
-    margin: 0rem auto 2rem auto;
+    margin: 0rem auto 1.5rem auto;
+    i {
+        padding-right: 1rem;
+        color: #333333;
+    }
 }
