--- a/views/checkout-page.html
+++ b/views/checkout-page.html
@@ -30,15 +30,19 @@
             </nav>
         </header>
 
+        <div id="container">
+            <h2 id="checkoutTitle">
+            </h2>
+            
+            <section id="teddyContainer">
+            </section>
 
-        <h2 id="checkoutTitle"></h2>
-        <section id="container">
-        </section>
+            <section id="finalCheckout">
+            </section>
 
-        <section id="finalCheckout"></section>
-
-        <section id="form"></section>
-
+            <section id="form">
+            </section>
+        </div>
         <footer>
             <nav class="navbar-footer">
                 <div class="dropdown">
