--- a/scss/main-page.scss
+++ b/scss/main-page.scss
@@ -10,7 +10,7 @@
 
 @media (max-width: 850px) {
     body {
-        background-color: #fff !important;
+        background-color: rgb(228, 214, 214) !important;
     }
     .Norbert {
         background-color: rgb(241, 234, 234) !important;
@@ -34,7 +34,7 @@
 
 body {
     margin: 0rem;
-    background-color: rgb(241, 234, 234);
+    background-color: rgb(228, 214, 214);
 }
 
 h2 {
@@ -67,7 +67,7 @@ h2 {
     max-width: 95vw;
     margin: auto;
     margin-bottom: 1em;
-    background-color: #fff;
+    background-color: rgb(241, 234, 234);
 }
 
 #mainPage .teddyName {
