--- a/scss/product-page.scss
+++ b/scss/product-page.scss
@@ -97,6 +97,7 @@ option {
     grid-area: quantity;
     font-size: 1.4rem;
     & input {
+        transform: scale(1.4);
         max-width: 50vw;
         min-width: 20vw;
         text-align: center;
@@ -167,7 +168,7 @@ option {
 
 .teddyColors {
     position: relative;
-    bottom: 3vh;
+    bottom: 4vh;
     grid-area: color;
     display: flex;
     flex-direction: column;
